--- a/DynamoDB-SDK-Examples/dotnet/DotnetSamples.csproj
+++ b/DynamoDB-SDK-Examples/dotnet/DotnetSamples.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.106.12" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.46" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
