--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 
 .DS_Store
 python/ReadMe.rst
-python/.idea/inspectionProfiles/profiles_settings.xml
-python/.idea/*
 python/venv
 tmpCredentials.json
 **/.vscode/**
@@ -15,3 +13,4 @@ package.json
 **/bin/
 **/obj/
 **/launchSettings.json
+**/.idea/*
