--- a/PrintDistinctPKs/LoadMaxValues/java/pom.xml
+++ b/PrintDistinctPKs/LoadMaxValues/java/pom.xml
@@ -34,7 +34,7 @@
             </dependency>
             <dependency> 
                 <groupId>software.amazon.awssdk</groupId>
-                <artifactId>core</artifactId>
+                <artifactId>sdk-core</artifactId>
                 <version>2.17.126</version>
             </dependency>
         </dependencies>
@@ -56,7 +56,7 @@
         </dependency>
         <dependency> 
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>sdk-core</artifactId>
             <version>2.17.126</version>
         </dependency>
     </dependencies>
