--- a/PrintDistinctPKs/LoadMaxValues/java/pom.xml
+++ b/PrintDistinctPKs/LoadMaxValues/java/pom.xml
@@ -18,7 +18,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.20.31</version>
+                <version>2.17.26</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -59,6 +59,13 @@
             <artifactId>sdk-core</artifactId>
             <version>2.17.126</version>
         </dependency>
+           <dependency>
+               <groupId>software.amazon.awssdk</groupId>
+               <artifactId>bom</artifactId>
+               <version>2.17.26</version>
+               <type>pom</type>
+               <scope>import</scope>
+           </dependency>
     </dependencies>
     <build>
         <plugins>
