--- a/PrintDistinctPKs/LoadMaxValues/java/pom.xml
+++ b/PrintDistinctPKs/LoadMaxValues/java/pom.xml
@@ -18,7 +18,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.17.126</version>
+                <version>2.20.48</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>sdk-core</artifactId>
+            <artifactId>aws-sdk-core</artifactId>
         </dependency>
     </dependencies>
     <build>
