--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ workshops/relational-migration/setenv.sh
 workshops/relational-migration/setenvd.sh
 workshops/relational-migration/source-tables/app_db.*
 
+**/.aws-sam/
