doc: Adding README.MD to the recipe backend

--- a/examples/NERDS/recipe-example/backend/docker-compose.yml
+++ b/examples/NERDS/recipe-example/backend/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   dynamodb-local:
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
     image: "amazon/dynamodb-local:latest"
-    container_name: dynamodb-local-recipe
+    container_name: dynamodb-local-recipe-backend
     ports:
       - "8000:8000"
     volumes:
