updates to chalice default region

--- a/workshops/relational-migration/.chalice/config.json
+++ b/workshops/relational-migration/.chalice/config.json
@@ -9,7 +9,7 @@
         "MYSQL_HOST":      "myhost.mynetwork.com",
         "MYSQL_DB":        "app_db",
         "MYSQL_USERNAME":  "dbuser",
-        "MYSQL_PASSWORD":  "mypassword",
+        "MYSQL_PASSWORD":  "m7de4uwt2eG#",
         "MIGRATION_STAGE":  "relational"
       },
       "autogen_policy": false,
