feat: Modernizr workshop, updated readmes, cleaned up folder structure, added mysql logs for central reference, adding python script to parse the logs, fixed some UI elements in shopping cart, registration and seller dashboard

--- a/workshops/modernizr/backend/.env
+++ b/workshops/modernizr/backend/.env
@@ -1,5 +1,5 @@
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
@@ -11,7 +11,7 @@ DB_TIMEOUT=60000
 # Server Configuration
 PORT=8100
 
-# JWT Configuration (IMPORTANT: Change this in production!)
+# JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-long-and-random
 JWT_EXPIRES_IN=24h
 
@@ -25,10 +25,10 @@ BCRYPT_SALT_ROUNDS=12
 MEMORY_WARNING_THRESHOLD=85
 MEMORY_CRITICAL_THRESHOLD=95
 
-# Rate Limiting Configuration
+# Rate Limiting Configuration (for load testing)
 RATE_LIMIT_AUTH_MAX=1000
 RATE_LIMIT_AUTH_WINDOW_MS=60000
 
-# Global Rate Limiting Configuration
+# Global Rate Limiting Configuration (for load testing)
 RATE_LIMIT_MAX_REQUESTS=10000
 RATE_LIMIT_WINDOW_MS=60000
