--- a/workshops/modernizr/backend/.env.test
+++ b/workshops/modernizr/backend/.env.test
@@ -7,7 +7,7 @@ JWT_EXPIRES_IN=1h
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=TestDbPass123!
+DB_PASSWORD=
 DB_NAME=online_shopping_store_test
 DB_CONNECTION_LIMIT=5
 DB_ACQUIRE_TIMEOUT=30000
@@ -18,3 +18,13 @@ PORT=8101
 
 # Security Configuration
 BCRYPT_SALT_ROUNDS=10
+
+# Performance Monitoring Thresholds
+MEMORY_WARNING_THRESHOLD=85
+MEMORY_CRITICAL_THRESHOLD=95
+
+# Rate Limiting Configuration
+RATE_LIMIT_AUTH_MAX=100
+RATE_LIMIT_AUTH_WINDOW_MS=60000
+RATE_LIMIT_MAX_REQUESTS=1000
+RATE_LIMIT_WINDOW_MS=60000
