--- a/workshops/modernizr/backend/.env.test.e2e
+++ b/workshops/modernizr/backend/.env.test.e2e
@@ -17,6 +17,10 @@ DB_TIMEOUT=30000
 # Server Configuration
 PORT=8101
 
+# Performance Monitoring Thresholds
+MEMORY_WARNING_THRESHOLD=85
+MEMORY_CRITICAL_THRESHOLD=95
+
 # Rate Limiting Configuration (Very Lenient for E2E Tests)
 RATE_LIMIT_MAX_REQUESTS=10000
 RATE_LIMIT_WINDOW_MS=60000
