--- a/workshops/modernizr/backend/.env.test.unit
+++ b/workshops/modernizr/backend/.env.test.unit
@@ -14,6 +14,10 @@ DB_NAME=test_unit_db
 # Server Configuration
 PORT=8102
 
+# Performance Monitoring Thresholds
+MEMORY_WARNING_THRESHOLD=85
+MEMORY_CRITICAL_THRESHOLD=95
+
 # Rate Limiting Configuration (Lenient for Unit Tests)
 RATE_LIMIT_MAX_REQUESTS=1000
 RATE_LIMIT_WINDOW_MS=60000
