--- a/workshops/modernizr/backend/.env.test.integration
+++ b/workshops/modernizr/backend/.env.test.integration
@@ -17,6 +17,10 @@ DB_TIMEOUT=30000
 # Server Configuration
 PORT=8103
 
+# Performance Monitoring Thresholds
+MEMORY_WARNING_THRESHOLD=85
+MEMORY_CRITICAL_THRESHOLD=95
+
 # Rate Limiting Configuration (Lenient for Integration Tests)
 RATE_LIMIT_MAX_REQUESTS=1000
 RATE_LIMIT_WINDOW_MS=60000
