feat: Production builds behind nginx

--- a/workshops/modernizr/frontend/.env
+++ b/workshops/modernizr/frontend/.env
@@ -1,2 +1,15 @@
+# Development Environment Configuration
+# This file contains settings for local development
+
+# API Configuration
+# In development: Use full localhost URL for backend API calls
+# In production: Will use relative paths (/api) for nginx proxy
 REACT_APP_API_URL=http://localhost:8100
+
+# Development Server Port
 PORT=3000
+
+# Public URL Configuration
+# In development: Empty/undefined for root path serving
+# In production: Set to /store for nginx base path
+PUBLIC_URL=
