feat: Updated front end to optimize build and include security features, added prompts and a new artifacts folder that will be used by the build

--- a/workshops/modernizr/frontend/.env
+++ b/workshops/modernizr/frontend/.env
@@ -4,7 +4,7 @@
 # API Configuration
 # In development: Use full localhost URL for backend API calls
 # In production: Will use relative paths (/api) for nginx proxy
-REACT_APP_API_URL=http://localhost:8100
+REACT_APP_API_URL=http://localhost:8100/api
 
 # Development Server Port
 PORT=3000
