House keeping config files

--- a/workshops/modernizr/backend/.env
+++ b/workshops/modernizr/backend/.env
@@ -1,7 +1,6 @@
 # Database Configuration
 DATABASE_TYPE=mysql
-# DB_HOST=127.0.0.1
-DB_HOST=3.19.73.197
+DB_HOST=127.0.0.1
 DB_PORT=3306
 # DB_USER=root
 DB_USER=dbuser
@@ -14,7 +13,7 @@ DB_TIMEOUT=60000
 # DynamoDB Configuration
 # DYNAMODB_ENDPOINT=http://localhost:8000
 AWS_REGION=us-east-2
-AWS_PROFILE=estserna+twitch-Admin
+AWS_PROFILE=
 # AWS credentials will be loaded from AWS CLI profile
 DYNAMODB_TABLE_PREFIX=
 
@@ -22,7 +21,7 @@ DYNAMODB_TABLE_PREFIX=
 PORT=8100
 
 # JWT Configuration
-JWT_SECRET=13020429472038029834502893508205382131314343
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-long-and-random
 JWT_EXPIRES_IN=24h
 
 # Environment
