--- a/scripts/dynamodb-local-bulk-loader/pyproject.toml
+++ b/scripts/dynamodb-local-bulk-loader/pyproject.toml
@@ -3,7 +3,7 @@ name = "dynamodb-local-bulk-loader"
 version = "0.1.0"
 description = "Local Python implementations for bulk loading CSV data into Amazon DynamoDB with automatic performance tuning"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "aioboto3>=12.0.0",
     "boto3>=1.34.0",
@@ -31,11 +31,11 @@ packages = ["src"]
 
 [tool.black]
 line-length = 100
-target-version = ["py39", "py310", "py311"]
+target-version = ["py310", "py311"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py39"
+target-version = "py311"
 
 [tool.ruff.lint]
 select = [
@@ -52,7 +52,7 @@ ignore = [
 ]
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
